--- a/src/mailers/templates/admin/mail-invite-admin.pug
+++ b/src/mailers/templates/admin/mail-invite-admin.pug
@@ -1,4 +1,14 @@
 doctype html
 html
+  head
+    meta(charset='UTF-8')
+    title Thư mời tham gia hệ thống FOOD_TLU_ADMIN
   body
-    p You pass: #{pass}
+    h1 Chào mừng bạn đến với FOOD_TLU!
+    p Bạn đã được mời tạo tài khoản để sử dụng hệ thống đặt món trực tuyến của chúng tôi.
+    p Mật khẩu đăng nhập vào hệ thống của bạn:
+    p
+      strong Mật khẩu: #{pass}
+    p Nếu bạn không yêu cầu email này, vui lòng bỏ qua nó.
+    p Trân trọng,
+    p Đội ngũ FOOD_TLU_ADMIN
