--- a/src/mailers/templates/user/mail-forgot-password.pug
+++ b/src/mailers/templates/user/mail-forgot-password.pug
@@ -1,5 +1,14 @@
 doctype html
 html
+  head
+    meta(charset="UTF-8")
+    title Yêu cầu đổi mật khẩu - FOOD_TLU
   body
-    p Vui lòng truy cập url sau để đổi mật khẩu của bạn
-    a(href=url) #{url}
+    h1 Yêu cầu đổi mật khẩu
+    p Chúng tôi đã nhận được yêu cầu đổi mật khẩu cho tài khoản của bạn trên hệ thống FOOD_TLU.
+    p Vui lòng nhấp vào liên kết bên dưới để đặt lại mật khẩu của bạn:
+    p
+      a(href=url) #{url}
+    p Nếu bạn không thực hiện yêu cầu này, vui lòng bỏ qua email này. Mật khẩu của bạn sẽ không thay đổi.
+    p Trân trọng,
+    p Đội ngũ FOOD_TLU
